@@ -31,6 +31,7 @@ NEWS
   * only require FDEVENT_IN bit to be set for listening connections (fixes #2227)
   * add libev fdevent handler: server.event-handler = "libev"
   * mod_proxy: return response as soon as it is available (fixes #2196)
+  * don't overwrite global server.force-lowercase-filenames setting (fixes #2042)
 
 - 1.4.26 - 2010-02-07
   * Fix request parser to handle packets with splitted \r\n\r\n (fixes #2105)
